completed the homework_2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MoneyTracker</string>
+
+    <string name="add_item_title">New note</string>
+    <string name="itemName">Name</string>
+    <string name="itemPrice">0</string>
+    <string name="dollar_item">$</string>
 </resources>
