--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="itemPrice">0</string>
     <string name="dollar_item">$</string>
     <string name="budget">Budget</string>
+    <string name="price_pattern">%1$s $</string>
 </resources>
