--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MoneyTracker</string>
 
-    <string name="add_item_title">New record</string>
+    <string name="add_item_title">New item</string>
     <string name="itemName">Name</string>
     <string name="itemPrice">0</string>
     <string name="dollar_item">$</string>
